# temperature-monitor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  temperature-monitor.yml
.reuse/: dep5
LICENSES/: MIT.txt
temperature_monitor/: catch_temperature.py  server.py
